--- a/AviaTiketsWpfApplication/packages.config
+++ b/AviaTiketsWpfApplication/packages.config
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
-  <package id="MahApps.Metro" version="1.1.3-ALPHA071" targetFramework="net46" />
-  <package id="MahApps.Metro.Resources" version="0.4.0.0" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="2.0.4" targetFramework="net46" />
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net46" />
+  <package id="MahApps.Metro" version="1.6.5" targetFramework="net46" />
+  <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net46" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
-  <package id="MvvmLight" version="5.1.1.0" targetFramework="net45" />
-  <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="7.0.1-beta3" targetFramework="net45" />
+  <package id="MvvmLight" version="5.4.1.1" targetFramework="net46" />
+  <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net46" />
   <package id="sqlite.redist" version="3.8.4.2" targetFramework="net45" />
-  <package id="sqlite-net" version="1.0.8" targetFramework="net45" />
+  <package id="sqlite-net" version="1.6.249-beta" targetFramework="net46" />
 </packages>
