--- a/TravelpayoutsAPI.Library/packages.config
+++ b/TravelpayoutsAPI.Library/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable-net45+win8+wp8+wpa81+monoandroid+monotouch" userInstalled="true" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable-net45+win8+wp8+wpa81+monoandroid+monotouch" userInstalled="true" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable45-net45+win8+wp8+wpa81" userInstalled="true" />
   <package id="Microsoft.Bcl.Compression" version="3.9.85" targetFramework="portable-net45+win8+wp8+wpa81+monoandroid+monotouch" userInstalled="true" />
-  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable-net45+win8+wp8+wpa81+monoandroid+monotouch" userInstalled="true" />
-  <package id="Newtonsoft.Json" version="7.0.1-beta2" targetFramework="portable-net45+win+wpa81+wp80" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
