--- a/TravelpayoutsAPI.UnitTestProject/packages.config
+++ b/TravelpayoutsAPI.UnitTestProject/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.3.1" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.Bcl.Compression" version="3.9.85" targetFramework="net45" userInstalled="true" />
-  <package id="Moq" version="4.2.1409.1722" targetFramework="net45" userInstalled="true" />
-  <package id="Newtonsoft.Json" version="7.0.1-beta2" targetFramework="net45" userInstalled="true" />
+  <package id="Moq" version="4.10.1" targetFramework="net45" userInstalled="true" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net45" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net45" />
 </packages>
